2008-02-13  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed Bug 361473 - Incorrect placement
	  of the cursor with mouse click.

2008-02-13  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextMarker.cs,
	  Mono.TextEditor/TextEditor.cs: Optimized drawing.

2008-02-13  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextEditor.cs: Fixed
	  drawing glicht caused by false adjustment.

2008-02-13  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Changed scrolling a bit.

2008-02-13  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/FoldMarkerMargin.cs,
	  Mono.TextEditor/IMargin.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/BookmarkMargin.cs, Mono.TextEditor/GutterMargin.cs:
	  Implemented shift+click behavior.

2008-02-13  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Changed delete action.

2008-02-13  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/FoldMarkerMargin.cs,
	  Mono.TextEditor/IMargin.cs, Mono.TextEditor/TextMarker.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/BookmarkMargin.cs,
	  Mono.TextEditor/GutterMargin.cs: Implemented smooth scrolling.

2008-02-12  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Fixed an error.

2008-02-12  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.mdp, Mono.TextEditor/Document.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/SemanticRule.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs,
	  Mono.TextEditor.Highlighting/Rule.cs, Makefile.am: Worked on semantic
	  highlighting.

2008-02-12  Mike Krüger <mkrueger@novell.com> 

	* CSharpSyntaxMode.xml, Mono.TextEditor/LineSplitter.cs,
	  Mono.TextEditor/TextMarker.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/LineSegment.cs,